<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.appreators.game.barrelball.CreditActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_size_L"
        android:text="@string/credit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_music"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/font_size_S" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_background_1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/font_size_S" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_background_2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/font_size_S" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_background_3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/font_size_S" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_barrel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/font_size_S" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_ball"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/font_size_S" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/padding_size_M"
        android:text="@string/copy_right"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/font_size_LL" />
    
</LinearLayout>